# macal-contracts-impact

./: .gitignore  README.md  pyproject.toml
src/contracts_impact/: __init__.py  aggregator.py  extract.py  impact.py  models.py  path_router.py  platform_topics.py
src/contracts_impact/extractors/: __init__.py  event_schemas.py  fastapi_routes.py  frontend_clients.py  http_clients.py  publishers.py  subscribers.py
templates/: contracts-check.yml
tests/: conftest.py  test_cli.py  test_extractors.py
tests/fixtures/fastapi_routes_basic/app/api/api_v1/endpoints/: foo.py
tests/fixtures/http_client_singleton/app/services/: foo_client.py
tests/fixtures/publisher_literal/app/services/: foo.py
tests/fixtures/publisher_settings_no_default/app/core/: config.py
tests/fixtures/publisher_settings_no_default/app/services/: foo.py
tests/fixtures/publisher_settings_with_default/app/core/: config.py
tests/fixtures/publisher_settings_with_default/app/services/: foo.py
tests/fixtures/publisher_wrapper/app/services/: foo.py
tests/fixtures/subscriber_canonical_url/app/api/api_v1/endpoints/: events.py
